header finalized and spacer added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
           <nav class="txt">
             <a href="index.html">Home</a>
             <a href="#">About</a>
-            <a href="#">Services</a>
+            <a href="#">My Art</a>
+            <a href="#">My Tech</a>
+            <a href="#">My Wordpress</a>
             <a href="#">Blog</a>
             <a href="#">Contact</a>
           </nav>
@@ -42,17 +44,21 @@
             <a href="https://www.deviantart.com/wytchieone" target="_blank"
               ><i class="fab fa-deviantart"></i
             ></a>
-            <a href="https://www.facebook.com/melissa.a.pulliam" target="_blank"
+            <!-- <a href="https://www.facebook.com/melissa.a.pulliam" target="_blank"
               ><i class="fab fa-facebook"></i
-            ></a>
-          </nav>
+            ></a> -->
+          </nav>  
         </header>
+        
         <main>
-          <h1>Lorem ipsum dolor sit amet,</h1>
-          <p>
-            consectetur adipisicing elit. Ad modi laborum enim dolores iusto
-            amet quidem, doloribus delectus quis ipsa repudiandae, quo mollitia
-            temporibus facere esse repellat neque ducimus quisquam?
+            <div class = "spacer"></div> 
+          <div class = "top-content">
+            <h1>Lorem ipsum dolor sit amet,</h1>
+            <p>
+              consectetur adipisicing elit. Ad modi laborum enim dolores iusto
+              amet quidem, doloribus delectus quis ipsa repudiandae, quo mollitia
+              temporibus facere esse repellat neque ducimus quisquam?
+          </div>
           </p>
         </main>
       </div>
