added linkedin icon and link

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <a href="https://github.com/otterspawdesign" target="_blank"
               ><i class="fab fa-github"></i
             ></a>
+           <a href="https://www.linkedin.com/in/melissa-kemp-b245b9106/" target = "_blank"> <i class="fab fa-linkedin"></i></a>
             <a href="https://www.instagram.com/alwaysmissliss/" target="_blank"
               ><i class="fab fa-instagram"></i
             ></a>
